# yggdrazil

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: Specification.md
docs/superpowers/plans/: 2026-04-23-yggdrazil.md  2026-04-24-audit-log-live-monitoring.md  2026-04-24-delete-world-tui.md
docs/superpowers/specs/: 2026-04-23-yggdrazil-design.md  2026-04-24-audit-log-live-monitoring-design.md  2026-04-24-delete-world-tui-design.md
scripts/: install.sh
src/: lib.rs  main.rs  types.rs
src/cli/: daemon_cmd.rs  hook.rs  init.rs  mod.rs  monit.rs  run.rs  sync.rs  update.rs
src/daemon/: bus.rs  laws.rs  mod.rs  roots.rs  trunk.rs
src/ipc/: client.rs  mod.rs  server.rs
src/tui/: dashboard.rs  mod.rs  world_detail.rs
tests/: bus_unit.rs  init_integration.rs  trunk_unit.rs
