[package]
name = "yggdrazil"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "ygg"
path = "src/main.rs"

[lib]
name = "yggdrazil"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
ratatui = "0.27"
crossterm = "0.27"
git2 = "0.19"
notify-rust = "4"
interprocess = { version = "2", features = ["tokio"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
ureq = { version = "2", features = ["json"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
